# sysrepo-plugin-os-metrics

./: DOCUMENTATION.md  README.md  meson.build
src/: callback.h  cpu_stats.h  dt_metrics_plugin.cc  filesystem_stats.h  memory_stats.h  meson.build  os_metrics_plugin.cc  process_stats.h  threshold_manager.h
src/utils/: globals.h
yang/: dt-metrics.yang  os-metrics.yang  sensor-notifications-augment-if.yang  sensor-notifications-augment.yang
yang/share/: dt-metrics-test-config.xml  os-metrics-test-config.xml
